update Casdoc demo page

--- a/casdoc/online-demo/index.html
+++ b/casdoc/online-demo/index.html
@@ -190,9 +190,12 @@
 <body>
 	<div>
 		<h1>Casdoc Transformer</h1>
+		<hr/>
+		<p style="color: DimGray">Casdoc is a project developed by <a href="https://www.cs.mcgill.ca/~mnassif/">Mathieu Nassif</a> and <a href="https://www.cs.mcgill.ca/~martin">Marting Robillard</a> at <a href="https://www.cs.mcgill.ca/">McGill University</a>, with past contributions from Zara Horlacher. A description of the technique is available in <a href="https://www.cs.mcgill.ca/~martin/papers/icpc2022-demo.pdf">this paper</a>. Please contact the authors if you are interested in licensing this technology for educational or commercial use.</i></p>
+		<hr/>
 		<p>Use the field below to transform annotated Java code examples into Casdoc HTML documents. You can find below a video demonstrating the features of the Casdoc format, and a description of the annotation language for Java files.</p>
 		<p id="login">
-			This service is free, but requires you to create an account.<br />
+			This service is free for personal use, but requires you to create an account.<br />
 			<a href="https://casdoc.auth.us-east-1.amazoncognito.com/oauth2/authorize?client_id=5171ck1urfa1vpvmgnikg0pvlr&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Fwww.cs.mcgill.ca%2F%7Emnassif%2Fcasdoc%2Fonline-demo%2F">You can login/register here.</a>
 		</p>
 		<p id="loggedin" style="display: none;">
