--- a/index.html
+++ b/index.html
@@ -110,14 +110,15 @@
         <li>
           <strong>2022</strong>
           <ul>
-            <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. To appear in <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, 4 pages, May, 2022.</li>
+            <li>Mathieu Nassif, Zara Horlacher, and Martin P. Robillard. <a href="https://www.cs.mcgill.ca/~martin/papers/icpc2022-demo.pdf">Casdoc: Unobtrusive Explanations in Code Examples</a>. Research Demonstration. To appear in <em>Proceedings of the 30th IEEE International Conference on Program Comprehension</em>, 5 pages, May, 2022.</li>
+            <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="https://www.cs.mcgill.ca/~martin/papers/icse2022-demo.pdf">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. To appear in <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, 4 pages, May, 2022.</li>
+            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. <em>IEEE Software</em>, 39(3):106-115, June, 2022.</li>
           </ul>
         </li>
         <li>
           <strong>2021</strong>
           <ul>
-            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. To appear in <em>IEEE Software</em>, 10 pages, 2021.</li>
-            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 12 pages, 2021.</li>
+            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 12 pages, June, 2021.</li>
             <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
           </ul>
         </li>
@@ -174,7 +175,7 @@
           <ul>
             <li>2018, 2019: Lorne Trottier Fellowship</li>
             <li>2018, 2019, 2020: Graduate Research Enhancement and Travel (GREAT) Award</li>
-            <li>2016, 2017: Graduate Excellence Award</li>
+            <li>2016, 2017, 2020, 2021: Graduate Excellence Award</li>
           </ul>
         </li>
       </ul>
@@ -229,7 +230,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 2 February 2022</em></small></span>
+    <span class="line"><small><em>Last update: 8 June 2022</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
