update pubs and TAs

--- a/index.html
+++ b/index.html
@@ -110,29 +110,29 @@
         <li>
           <strong>2022</strong>
           <ul>
-            <li>Mathieu Nassif, Zara Horlacher, and Martin P. Robillard. <a href="https://www.cs.mcgill.ca/~martin/papers/icpc2022-demo.pdf">Casdoc: Unobtrusive Explanations in Code Examples</a>. Research Demonstration. To appear in <em>Proceedings of the 30th IEEE International Conference on Program Comprehension</em>, 5 pages, May, 2022.</li>
-            <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="https://www.cs.mcgill.ca/~martin/papers/icse2022-demo.pdf">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. To appear in <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, 4 pages, May, 2022.</li>
-            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. <em>IEEE Software</em>, 39(3):106-115, June, 2022.</li>
+            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. In <em>IEEE Transactions on Software Engineering</em>, 48(9): 3268-3279, September, 2022.</li>
+            <li>Mathieu Nassif, Zara Horlacher, and Martin P. Robillard. <a href="https://doi.org/10.1145/3524610.3527875">Casdoc: Unobtrusive Explanations in Code Examples</a>. Research Demonstration. In <em>Proceedings of the 30th IEEE International Conference on Program Comprehension</em>, pages 631-635, May, 2022.</li>
+            <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1145/3510454.3516856">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. In <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, pages 56-60, May, 2022.</li>
+            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. In <em>IEEE Software</em>, 39(3):106-115, June, 2022.</li>
           </ul>
         </li>
         <li>
           <strong>2021</strong>
           <ul>
-            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 12 pages, June, 2021.</li>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. In <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
           </ul>
         </li>
         <li>
           <strong>2020</strong>
           <ul>
-            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
+            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. In <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
           </ul>
         </li>
         <li>
           <strong>2019</strong>
           <ul>
-            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00039">Witt: Querying Technology Terms Based on Automated Classification</a>. Research Demonstration. <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 53-66, May, 2019.</li>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00128">Constructural Software Documentation</a>. Extended Abstract. <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 308-309, May, 2019.</li>
+            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00039">Witt: Querying Technology Terms Based on Automated Classification</a>. Research Demonstration. In <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 53-66, May, 2019.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSE-Companion.2019.00128">Constructural Software Documentation</a>. Extended Abstract. In <em>Companion Proceedings of the 41st IEEE/ACM International Conference on Software Engineering</em>, pages 308-309, May, 2019.</li>
           </ul>
         </li>
         <li>
@@ -174,8 +174,8 @@
         <li><strong>McGill</strong>
           <ul>
             <li>2018, 2019: Lorne Trottier Fellowship</li>
-            <li>2018, 2019, 2020: Graduate Research Enhancement and Travel (GREAT) Award</li>
-            <li>2016, 2017, 2020, 2021: Graduate Excellence Award</li>
+            <li>2018, 2019, 2020, 2022: Graduate Research Enhancement and Travel (GREAT) Award</li>
+            <li>2016, 2017, 2020, 2021, 2022: Graduate Excellence Award</li>
           </ul>
         </li>
       </ul>
@@ -194,9 +194,11 @@
         <li>
           <strong>Teaching Assistant</strong>
           <ul>
+            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software Design</em>,
+              Fall 2022</li>
             <li><a href="https://cs.mcgill.ca/~martin/teaching/comp529-winter-2022/">COMP 529</a>,
                 <em>Software Architecture</em>, Winter 2022</li>
-            <li><a href="https://github.com/prmr/COMP303">COMP 303</a>, <em>Software Design</em>,
+            <li><a href="https://github.com/prmr/COMP303/tree/2021F">COMP 303</a>, <em>Software Design</em>,
                 Fall 2021</li>
             <li><a href="https://github.com/jin-guo/COMP303_Winter2021">COMP 303</a>, <em>Software
                 Design</em>, Winter 2021</li>
@@ -230,7 +232,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 8 June 2022</em></small></span>
+    <span class="line"><small><em>Last update: 23 November 2022</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
