add new pubs (TSE/Scode and CHI/Casdoc)

--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
       <h2>Publications</h2>
       <ul class="twolevels">
         <li>
+          <strong>2023</strong>
+          <ul>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2023.3265855">Identifying Concepts in Software Projects</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 15 pages, April, 2023</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1145/3544549.3585767">A Field Study of Developer Documentation Format</a>. Late-Breaking Work. In <em>Proceedings of the ACM CHI Conference on Human Factors in Computing Systems - Extended Abstracts</em>, 7 pages, April, 2023</li>
+          </ul>
+        </li>
+        <li>
           <strong>2022</strong>
           <ul>
             <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. In <em>IEEE Transactions on Software Engineering</em>, 48(9): 3268-3279, September, 2022.</li>
@@ -232,7 +239,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 23 November 2022</em></small></span>
+    <span class="line"><small><em>Last update: 19 April 2023</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
