--- a/test-casdoc/output/demo/functionalprogramming/FunctionalProgrammingDemo.html
+++ b/test-casdoc/output/demo/functionalprogramming/FunctionalProgrammingDemo.html
@@ -22,7 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.basic.min.js"></script>
 
   <link rel="stylesheet" href="../../../html-resources/casdoc-style.css">
-  <script src="../../../html-resources/casdoc.js"></script>
+  <script src="../../../html-resources/obfuscated-casdoc.js"></script>
 </head>
 
 <body>
