--- a/casdoc/beta-version.html
+++ b/casdoc/beta-version.html
@@ -50,7 +50,7 @@
 					headers: {
 						"Content-Type": "application/x-www-form-urlencoded"
 					},
-					data: "grant_type=authorization_code&client_id=4l1s6f11t1sliqfomdt9t1v73f&redirect_uri=https%3A%2F%2Fwww.cs.mcgill.ca%2F%7Emartin%2Fcasdoc%2Fbeta-version.html&code=" + authCode
+					data: "grant_type=authorization_code&client_id=4l1s6f11t1sliqfomdt9t1v73f&redirect_uri=https%3A%2F%2Fwww.cs.mcgill.ca%2F%7Emnassif%2Fcasdoc%2Fbeta-version.html&code=" + authCode
 				}).done(function (response) {
 					idToken = response.id_token;
 					refreshToken = response.refresh_token;
@@ -61,8 +61,6 @@
 					document.getElementById("login").style.display = "none";
 					document.getElementById("form").style.display = "";
 					document.getElementById("loggedin").style.display = "";
-					document.getElementById("examples").style.display = "";
-					document.getElementById("examplelinks").style.display = "";
 				}).done(function (response) {
 					var access = response.access_token;
 					ajax({
@@ -83,8 +81,6 @@
 					document.getElementById("login").style.display = "";
 					document.getElementById("form").style.display = "none";
 					document.getElementById("loggedin").style.display = "none";
-					document.getElementById("examples").style.display = "none";
-					document.getElementById("examplelinks").style.display = "none";
 					alert("Login error: this could be due to a page refresh.\nPlease log in again.");
 				});
 			};
@@ -159,8 +155,6 @@
 						document.getElementById("login").style.display = "";
 						document.getElementById("form").style.display = "none";
 						document.getElementById("loggedin").style.display = "none";
-						document.getElementById("examples").style.display = "none";
-						document.getElementById("examplelinks").style.display = "none";
 						alert("Authorization error: " + error + "\nTry to log in again");
 					});
 				}
