update webpage (Jan 2024)

--- a/index.html
+++ b/index.html
@@ -110,29 +110,30 @@
         <li>
           <strong>2023</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2023.3265855">Identifying Concepts in Software Projects</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 15 pages, April, 2023</li>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1145/3544549.3585767">A Field Study of Developer Documentation Format</a>. Late-Breaking Work. In <em>Proceedings of the ACM CHI Conference on Human Factors in Computing Systems - Extended Abstracts</em>, 7 pages, April, 2023</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://arxiv.org/abs/2311.18057">Non Linear Software Documentation with Interactive Code Examples</a>. <em>arXiv preprint</em>, 2311.18057, 28 pages, November, 2023</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2023.3265855">Identifying Concepts in Software Projects</a>. In <em>IEEE Transactions on Software Engineering</em>, 49(7), pages 3660-3674, July, 2023</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1145/3544549.3585767">A Field Study of Developer Documentation Format</a>. Late-Breaking Work. In <em>Proceedings of the ACM CHI Conference on Human Factors in Computing Systems - Extended Abstracts</em>, article no. 7, 7 pages, April, 2023</li>
           </ul>
         </li>
         <li>
           <strong>2022</strong>
           <ul>
-            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. In <em>IEEE Transactions on Software Engineering</em>, 48(9): 3268-3279, September, 2022.</li>
+            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. In <em>IEEE Transactions on Software Engineering</em>, 48(9), pages 3268-3279, September, 2022.</li>
             <li>Mathieu Nassif, Zara Horlacher, and Martin P. Robillard. <a href="https://doi.org/10.1145/3524610.3527875">Casdoc: Unobtrusive Explanations in Code Examples</a>. Research Demonstration. In <em>Proceedings of the 30th IEEE International Conference on Program Comprehension</em>, pages 631-635, May, 2022.</li>
             <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1145/3510454.3516856">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. In <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, pages 56-60, May, 2022.</li>
-            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. In <em>IEEE Software</em>, 39(3):106-115, June, 2022.</li>
+            <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. In <em>IEEE Software</em>, 39(3), pages 106-115, June, 2022.</li>
           </ul>
         </li>
         <li>
           <strong>2021</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. In <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. In <em>Empirical Software Engineering</em>, 26(2), article no. 31, 31 pages, March, 2021.</li>
           </ul>
         </li>
         <li>
           <strong>2020</strong>
           <ul>
-            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. In <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
+            <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. In <em>IEEE Transactions on Software Engineering</em>, 46(1), pages 20-32, January, 2020.</li>
           </ul>
         </li>
         <li>
@@ -152,7 +153,7 @@
         <li>
           <strong>2017</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSME.2017.64">Revisiting Turnover-Induced Knowledge Loss in Software Projects</a>. In <em>Proceedings of the 33rd IEEE International Conference on Software Maintenance and Evolution</em>, pages 261–272, September, 2017.
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSME.2017.64">Revisiting Turnover-Induced Knowledge Loss in Software Projects</a>. In <em>Proceedings of the 33rd IEEE International Conference on Software Maintenance and Evolution</em>, pages 261-272, September, 2017.
             </li>
           </ul>
         </li>
@@ -178,11 +179,13 @@
             <li>Summer 2015: <a href="http://ism.uqam.ca/scholarships/#4">ISM Bourse d'été de premier cycle</a></li>
           </ul>
         </li>
-        <li><strong>McGill</strong>
+        <li><strong>Others</strong>
           <ul>
-            <li>2018, 2019: Lorne Trottier Fellowship</li>
-            <li>2018, 2019, 2020, 2022: Graduate Research Enhancement and Travel (GREAT) Award</li>
-            <li>2016, 2017, 2020, 2021, 2022: Graduate Excellence Award</li>
+            <li>2023: Globalink Research Award, <em>Mitacs</em></li>
+            <li>2023: Graduate Mobility Award, <em>McGill</em></li>
+            <li>2016–2017, 2020–2024: Graduate Excellence Award, <em>McGill</em></li>
+            <li>2018–2020, 2022: Graduate Research Enhancement and Travel (GREAT) Award, <em>McGill</em></li>
+            <li>2018, 2019: Lorne Trottier Fellowship, <em>McGill</em></li>
           </ul>
         </li>
       </ul>
@@ -201,7 +204,7 @@
         <li>
           <strong>Teaching Assistant</strong>
           <ul>
-            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software Design</em>,
+            <li><a href="https://github.com/prmr/COMP303/tree/2022F">COMP 303</a>, <em>Software Design</em>,
               Fall 2022</li>
             <li><a href="https://cs.mcgill.ca/~martin/teaching/comp529-winter-2022/">COMP 529</a>,
                 <em>Software Architecture</em>, Winter 2022</li>
@@ -239,7 +242,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 19 April 2023</em></small></span>
+    <span class="line"><small><em>Last update: 15 January 2024</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
