--- a/casdoc/beta-version.html
+++ b/casdoc/beta-version.html
@@ -176,15 +176,14 @@
 <body>
 	<nav class="navbar navbar-expand-sm sticky-top bg-dark" data-bs-theme="dark">
 		<div class="container">
-			<a class="navbar-brand" href="index.html" id="nav-brand">Casdoc</a>
+			<a class="navbar-brand" href="https://www.cs.mcgill.ca/~martin/casdoc/" id="nav-brand">Casdoc</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#top-nav"
 				aria-controls="top-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="top-nav">
 				<ul class="nav navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-					<li class="nav-item"><a class="nav-link active" href="#">Try it yourself!</a></li>
+					<li class="nav-item"><a class="nav-link active" href="#">Beta version</a></li>
 					<li class="nav-item"><a class="nav-link" href="https://www.cs.mcgill.ca/~martin/designbook/">Textbook Code
 							Examples</a></li>
 				</ul>
@@ -195,7 +194,8 @@
 		<div class="section">
 			<h1>Casdoc Transformer (Beta Version)</h1>
 			<p>
-				This is the beta version of the newest release of the Casdoc Transformer.
+				This is the beta version of the newest release of the Casdoc Transformer. <br/>
+				<a href="beta-annotation-language.md">Language reference</a>
 			</p>
 			<p id="login">
 				This service requires an account. Contact Mathieu Nassif if you are interested in becoming a beta user.<br />
