--- a/tests/test-casdoc.html
+++ b/tests/test-casdoc.html
@@ -41,7 +41,7 @@
 		<p>
 			Testing deployment
 		</p>
-		<object data="CsCohort.html" width="100%" height="400rem"></object>
+		<object data="CasdocDemo.html" width="100%" height="400rem"></object>
 	</div>
 </body>
 
