--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               Canada
             </p>
             <ul>
-              <li><img src="assets/img/email-icon.png" alt="Email Icon" class="text-icon" /> Email: mnassif<span class="invisible"> [REMOVE THIS] </span>@cs<span class="invisible"> [AND THIS] </span>.mcgill.<span class="invisible"> [AND THAT] </span>ca</li>
+              <li><img src="assets/img/email-icon.png" alt="Email Icon" class="text-icon" /> Email: mathieu.nassif<span class="invisible"> [REMOVE THIS] </span>@mail<span class="invisible"> [AND THIS] </span>.mcgill.<span class="invisible"> [AND THAT] </span>ca</li>
               <li><img src="assets/img/github-icon.png" alt="GitHub Icon" class="text-icon" /> GitHub: <a href="https://github.com/nassifm">nassifm</a></li>
               <li><img src="assets/img/scholar-icon.png" alt="Google Scholar Icon" class="text-icon" /> Google Scholar: <a href="https://scholar.google.com/citations?user=TeuXRvAAAAAJ">Mathieu Nassif</a></li>
               <li><img src="assets/img/dblp-icon.png" alt="DBLP Icon" class="text-icon"> DBLP: <a href="https://dblp.uni-trier.de/pers/hd/n/Nassif:Mathieu">Mathieu Nassif</a></li>
@@ -242,7 +242,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 15 January 2024</em></small></span>
+    <span class="line"><small><em>Last update: 1 February 2024</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
