update thesis info

--- a/thesis-plan.html
+++ b/thesis-plan.html
@@ -17,25 +17,29 @@
     <div class="small-screen" id="Abstract">
 			<div class="row justify-content-center">
 				<div class="col-lg-9 col-xl-8" style="text-align: center;">
-					<h2>Understanding and Improving the Navigation of Learning Resources for Unfamiliar APIs</h2>
+					<h2>On-Demand Documentation via Code Examples</h2>
 					<p>A PhD thesis by <a href="index.html">Mathieu Nassif</a>, <em>coming soon</em></p>
-				</div>
-				<div class="col-lg-9 col-xl-8 text-justify">
-					<p>
-						<strong>Abstract ·</strong> Software products have become increasingly reliant on smaller software components, produced by third-party organizations, that accomplish specialized tasks. In this context, documentation is a crucial component of software development to mediate the knowledge exchange between developers who create reusable software components and those who rely on the components for their larger projects. Creating and maintaining good documentation, however, is an effort-intensive activity that is often overlooked in favor of working on the source code. Prior work has addressed this issue by proposing various methods to generate or to retrieve relevant information from a documentation set based on a query. These techniques focus on improving the quantity, accuracy, or relevance of the documentation content.
-					</p>
-					<p>
-						In this thesis, we approach the multi-faceted challenge of documentation quality through another perspective: the interaction between readers and the documents. Considering that documents must address a large audience of varied backgrounds and with subjective preferences, we designed and studied techniques to help programmers navigate the content of documents more effectively. In a first phase, we investigated techniques to identify concepts that programmers should be familiar with prior to reading a software component's documentation. This investigation led to a better understanding of techniques to capture and represent concepts with the use of knowledge bases such as Wikipedia. Our results can benefit component users, who may find gaps in their knowledge to address before trying to read complex documents, as well as developers who may want to review their software component or its documentation to minimize the number of conceptual dependencies.
-					</p>
-					<p>
-						In a second phase, we designed a new format, called Casdoc, to present online documentation. Casdoc diverges from the static presentation influenced by the historical constraints of printed resources. Instead, readers interact with documents to dynamically reveal and hide information based on their needs. This interactivity allows documents to contain more information without appearing bloated. In addition to creating a viable alternative format for learning resources, we also used Casdoc to study how programmers interact with documentation to guide the development of further formats. Our results demonstrate that readers are generally enthusiastic about the possibilities of new formats that can mitigate recurrent limitations of static documents. These findings, together with concrete design guidelines we elicited, motivate a wider exploration of alternative formats to complement content-focused research on documentation quality.
-					</p>
-				</div>
-				<div class="col-lg-9 col-xl-8" style="text-align: center;">
-					<ul class="inline">
+					<ul class="inline" style="margin-top: 1rem; margin-bottom: 1rem;">
 						<li><a href="#Timeline">Planned Timeline</a></li>
 						<li><a href="#Publications">Referenced Publications</a></li>
 					</ul>
+				</div>
+				<div class="col-lg-9 col-xl-8 text-justify">
+					<p>
+						<strong>Abstract &#8226;</strong> Software products have become increasingly reliant on smaller software components produced by third-party organizations to accomplish specialized tasks. In this context, documentation is a crucial component of software development to mediate the knowledge exchange between developers who create reusable software components and those who rely on the components for their projects. Creating and maintaining good documentation, however, is an effort-intensive activity that is often overlooked in favor of working on the source code. Prior work has addressed this issue by proposing various methods to generate or to retrieve relevant information from a documentation set based on a query. These techniques focus on improving the quantity, accuracy, or relevance of the documentation content.
+					</p>
+					<p>
+						In this thesis, we approach the multi-faceted challenge of documentation quality through another perspective: the interaction between readers and the documents. Improving ways to interact with documentation should help readers with varied backgrounds and subjective preferences apply their own optimal strategies to navigate to the information they need. Thus, considering the interaction between readers and documents as an essential aspect of documentation design should contribute to an efficient knowledge exchange between developers.
+					</p>
+					<p>
+						As a first contribution, we propose to automatically identify concepts that developers should be familiar with prior to reading a software component’s documentation. This investigation led to a better understanding of techniques to capture and represent concepts with the use of knowledge bases such as Wikipedia. Our results benefit component users, who may find gaps in their knowledge to address before trying to read complex documents. Our results also benefit developers who want to review their software component or its documentation to minimize the number of conceptual dependencies.
+					</p>
+					<p>
+						As a second contribution, we describe variations points observed in the design of high-quality Android tutorials. We compared the content and organization of three tutorials to identify design decisions that writers must take based on their judgment. As we compared only tutorials from reputable organizations and targeted at a similar audience, the identified variation points suggest aspects of documentation for which the impact of alternative decisions is not well understood. Thus, our results can help practitioners think more critically and systematically about various documentation design decisions. For researchers, our results highlight the need for further studies about specific documentation aspects.
+					</p>
+					<p>
+						As a third contribution, we designed a new format, called Casdoc, to present online documentation. Casdoc improves upon the static presentations influenced by the historical constraints of printed resources. Readers interact with documents to dynamically reveal and hide information based on their needs. This interactivity allows documents to contain more information without appearing bloated. In addition to creating a viable alternative format for learning resources, we also used Casdoc to study how developers interact with documentation to guide the development of further formats. The results demonstrate that our participants could leverage the benefits of Casdoc to mitigate recurrent limitations of static documents. These findings, together with the documentation design guidelines we elicited, motivate a wider exploration of alternative formats to complement content-focused research on documentation quality.
+					</p>
 				</div>
 			</div>
     </div>
@@ -43,8 +47,8 @@
 		<div class="small-screen" id="Timeline">
 			<h2>Planned Timeline</h2>
 			<ul>
-				<li><em>Initial submission:</em> February 2024</li>
-				<li><em>Defense:</em> May 2024</li>
+				<li><em>Initial submission:</em> March 2024</li>
+				<li><em>Defense:</em> June 2024</li>
 				<li><em>Final submission:</em> June 2024</li>
 			</ul>
 		</div>
